<resources>
    <string name="app_name">CourseRatingApp</string>
    <string name="choose_your_course">Choose your Course</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="please_insert_your_kea_email_address">Please insert your KEA email address</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="what_would_you_rate_your_teachers_performance">What would you rate your teachers performance?</string>
    <string name="how_well_does_the_teacher_prepare_for_the_classes">How well does the teacher prepare for the classes?</string>
    <string name="how_well_does_the_teacher_give_you_feedback">How well does the teacher give you feedback?</string>
    <string name="how_good_is_the_examples_the_teachers_use">How good is the examples the teachers use?</string>
    <string name="do_you_think_the_course_give_good_job_opportunities">Do you think the course give good job opportunities?</string>
    <string name="how_relevant_is_the_course">How relevant is the course?</string>
    <string name="rate">Rate</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="_0_100">0 / 100</string>
    <string name="recipientMail">sean@darcy.dk</string>
    <string name="course">Course</string>
    <string name="mailWelcome">Welcome to the recap of the score you\'ve given to the  %1$s course!</string>
    <string name="mailLine1">You gave the subject relevans a score of: \n %1$s </string>
    <string name="mailLine2">You gave the teacher performance a score of: \n %1$s </string>
    <string name="mailLine3">You gave the teacher preparation a score of: \n %1$s </string>
    <string name="mailLine4">You gave the amount of feedback a score of: \n %1$s </string>
    <string name="mailLine5">You gave the examples a score of: \n %1$s </string>
    <string name="mailLine6">You gave the job opportunities a score of: \n %1$s </string>
    <string name="mailGrade">You\'ve given your teacher a total score of: \n %1$d, which has earned the teacher a grade of %2$s </string>
    <string name="mailSubject">Your rating of the %1$s course</string>

</resources>
